# python-fast-cli

./: .gitignore  build.sh  check-dist.py  check_types.sh  myprepare.py  pyproject.toml  readme.md  show-version.py
.github/workflows/: python-package.yml
fast_speedtest/: api.py  cli.py  utils.py
tests/: test_cli.py
