[build-system]
requires = ["setuptools>=72", "wheel", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fast_speedtest"]

[project]
name = "fast-cli"
dynamic = ["version"]
description = "This package provides a command-line and Python interface for netflix's fast.com for speedtest"
readme = "readme.md"
authors = [{ name = "Ling Wang", email = "lingwangneuraleng@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "playwright>=1.45.1"
]
requires-python = ">=3.10"

[project.scripts]
fast-cli = "fast_speedtest.cli:main"

[tool.setuptools_scm]
write_to = "fast_speedtest/_version.py"
version_scheme="guess-next-dev"
local_scheme="node-and-timestamp"

[tool.ruff]
fix = false
target-version = "py38"
lint.select = ["E", "F", "B", "U", "YTT", "C", "DTZ", "PYI", "PT", "I", "FURB", "RUF"]
lint.ignore = ["E501"]
lint.preview = true
# exclude = ["**/*", "!fast_speedtest/**", "!tests/**"]

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
lines-between-types = 1
order-by-type = true

[tool.pytest.ini_options]
testpaths = ["tests"]
log_level = "debug"
log_cli_level = "info"
